crates/macro/ui-tests/immediate-closure-lifetime.stderr
error[E0412]: cannot find type `ImmediateClosure` in this scope
 --> ui-tests/immediate-closure-lifetime.rs:6:37
  |
6 |     fn bad_immediate_closure<'a>(f: ImmediateClosure<'a, dyn FnMut()>);
  |                                     ^^^^^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `ImmediateClosure`
  --> ui-tests/immediate-closure-lifetime.rs:13:27
   |
13 |     bad_immediate_closure(ImmediateClosure::new_mut(&mut || {
   |                           ^^^^^^^^^^^^^^^^ use of undeclared type `ImmediateClosure`
